# retrieval-lab

./: .gitignore  README.md  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_07_18_14:40-657d080d6620_initial_migration.py
retrieval_lab/cache/: client.py
retrieval_lab/config/: config.yaml  logger.py  settings.py
retrieval_lab/core/: exceptions.py
retrieval_lab/db/: base.py  connection.py  models.py
retrieval_lab/ingestion/: workflows.py
retrieval_lab/ingestion/activities/: chunker.py  dto.py  embedder.py  indexer.py  scraper.py
retrieval_lab/ingestion/embedding/: activities.py  base.py  cohere_impl.py  factory.py  fastembed_impl.py  ollama_impl.py
