[project]
name = "retrieval-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.2",
    "fastembed>=0.8.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "openai>=2.46.0",
    "pgvector>=0.5.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "temporalio>=1.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
